# WRAITH-Protocol

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_UPDATE_NOTES.md  DOCUMENTATION_STATUS.md  PHASE-13-SESSION-SUMMARY.md  PHASE_10_PROGRESS.md  PHASE_10_SESSION_2_SUMMARY.md  PHASE_10_SESSION_3.4_COMPLETE.md  README.md  REFACTORING_ANALYSIS_PHASE5.md  RELEASE_QUICKSTART.md  SESSION_3.4_SUMMARY.md  TECH-DEBT-SUMMARY.md  TECHNICAL_DEBT_ANALYSIS.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  fuzz.yml  jekyll-gh-pages.yml  mdbook-gh-pages.yml  release.yml
benches/: transfer.rs  transport_benchmarks.rs
clients/wraith-transfer/: TROUBLESHOOTING.md  WAYLAND.md  WAYLAND_FIX_SUMMARY.md
crates/wraith-cli/: Cargo.toml
crates/wraith-cli/src/: config.rs  main.rs  progress.rs
crates/wraith-core/: Cargo.toml  TECH-DEBT.md
crates/wraith-core/benches/: frame_bench.rs  transfer_bench.rs
crates/wraith-core/proptest-regressions/: frame.txt
crates/wraith-core/src/: congestion.rs  error.rs  frame.rs  lib.rs  migration.rs  path.rs  ring_buffer.rs  session.rs  stream.rs
crates/wraith-core/src/node/: circuit_breaker.rs  config.rs  connection.rs  discovery.rs  error.rs  file_transfer.rs  health.rs  identity.rs  ip_reputation.rs  mod.rs  multi_peer.rs  nat.rs  node.rs  obfuscation.rs  packet_handler.rs  progress.rs  rate_limiter.rs  resume.rs  routing.rs  security_monitor.rs  session.rs  session_manager.rs  transfer.rs  transfer_manager.rs
crates/wraith-core/src/transfer/: mod.rs  session.rs
crates/wraith-crypto/: Cargo.toml  SECURITY.md  TECH-DEBT.md
crates/wraith-crypto/benches/: crypto_bench.rs
crates/wraith-crypto/src/: aead.rs  constant_time.rs  elligator.rs  encrypted_keys.rs  error.rs  hash.rs  lib.rs  noise.rs  random.rs  ratchet.rs  signatures.rs  x25519.rs
crates/wraith-crypto/src/aead/: mod.rs  session.rs
crates/wraith-crypto/tests/: vectors.rs  zeroization_tests.rs
crates/wraith-discovery/: Cargo.toml
crates/wraith-discovery/src/: dht.rs  lib.rs  manager.rs  nat.rs  relay.rs
crates/wraith-discovery/src/dht/: mod.rs  node_id.rs  operations.rs
crates/wraith-discovery/src/nat/: hole_punch.rs  ice.rs  mod.rs  stun.rs  types.rs
crates/wraith-discovery/src/relay/: client.rs  mod.rs  protocol.rs  selection.rs  server.rs
crates/wraith-discovery/tests/: relay_integration.rs
crates/wraith-ffi/: build.rs
crates/wraith-files/: Cargo.toml
crates/wraith-files/benches/: files_bench.rs
crates/wraith-files/src/: async_file.rs  chunker.rs  hasher.rs  io_uring.rs  lib.rs  transfer.rs  tree_hash.rs
crates/wraith-obfuscation/: Cargo.toml
crates/wraith-obfuscation/benches/: obfuscation.rs
crates/wraith-obfuscation/src/: adaptive.rs  cover.rs  doh_tunnel.rs  lib.rs  padding.rs  timing.rs  tls_mimicry.rs  websocket_mimicry.rs
crates/wraith-transport/: Cargo.toml
crates/wraith-transport/src/: af_xdp.rs  factory.rs  io_uring.rs  io_uring_impl.rs  lib.rs  mtu.rs  numa.rs  transport.rs  udp.rs  udp_async.rs  worker.rs
docs/: COMPARISON.md  CONFIG_REFERENCE.md  DOCUMENTATION_STATUS.md  INTEGRATION_GUIDE.md  PERFORMANCE_REPORT.md  SECURITY_AUDIT.md  TROUBLESHOOTING.md  TUTORIAL.md  USER_GUIDE.md
docs/architecture/: security-model.md
docs/archive/: GEMINI.md  MEMORY_BANK_OPTIMIZATION_REPORT.md  README_Clients-DEV.md  README_Protocol-DEV.md  SUMMARY.md
docs/clients/: REFERENCE_CLIENT.md  overview.md
docs/engineering/: ERROR_HANDLING_AUDIT.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  api-reference.md  coding-standards.md  dependency-management.md  development-guide.md  python-tooling.md
docs/integration/: embedding-guide.md  interoperability.md  platform-support.md
docs/operations/: deployment-guide.md  monitoring.md  release-guide.md  troubleshooting.md
docs/runbooks/: DEPLOYMENT.md  INCIDENT_RESPONSE.md  KEY_ROTATION.md  MONITORING.md  TROUBLESHOOTING.md
docs/security/: DPI_EVASION_REPORT.md  README.md  SECURITY_AUDIT_TEMPLATE.md  rfc-required-algorithms.md
docs/technical/: BUFFER_POOL_GUIDE.md  COMPREHENSIVE_REFACTORING_ANALYSIS_v1.2.1.md
docs/testing/: performance-benchmarks.md  security-testing.md  testing-strategy.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cli_args.rs  config_parse.rs  crypto.rs  dht_message.rs  frame_parser.rs  padding.rs  peer_id.rs  tree_hash.rs
images/: banner.rs  wraith_banner_animated.html  wraith_banners.sh
ref-docs/: WRAITH-Security-Testing-Parameters-v1.0.md  Wardialing_Then-Now_History.md  protocol_implementation_guide.md  protocol_naming_compendium.md  protocol_technical_details.md
scripts/: package.sh  profile.sh  venv-setup.sh
tests/: Cargo.toml  integration_advanced.rs  integration_hardening.rs  integration_tests.rs  lib.rs  property_tests.rs  test_helpers.rs
tests/fixtures/: mod.rs  two_node.rs
to-dos/: ROADMAP-clients.md  ROADMAP.md  phase-12-v1.2.0.md
to-dos/clients/: wraith-recon-sprints.md  wraith-redops-sprints.md
to-dos/completed/: PHASE-12-COMPLETE.md  PHASE-13-PROGRESS-REPORT.md  sprint-12.6-summary.md
to-dos/protocol/: PHASE-15-SPRINT-15.1-PROGRESS.md  phase-1-foundation.md  phase-11-v1.1.0.md  phase-13-v1.3.0.md  phase-14-v1.4.0.md  phase-2-crypto.md  phase-4-obfuscation.md  phase-4-optimization-sprints.md  phase-6-integration.md  phase-7-hardening.md
to-dos/technical-debt/: IMPLEMENTATION-REPORT.md  LOCK-CONTENTION-ANALYSIS-2025-12-07.md  LOCK-CONTENTION-SPRINT-SUMMARY-2025-12-07.md  REFACTORING-AUDIT-STATUS-2025-12-06.md  REFACTORING-RECOMMENDATIONS-v1.3.0-2025-12-08.md  SPRINT_14.2.2_STATUS.md  STRING_ALLOCATION_AUDIT_2025-12-07.md  STRING_ALLOCATION_REDUCTION_SUMMARY_2025-12-07.md  TECH-DEBT-POST-PHASE-11.md  TECH-DEBT-v1.3.0-2025-12-08.md  TECH-DEBT-v1.5.0.md  UNSAFE-DOCUMENTATION-SUMMARY-Sprint-14.4.2.md  phase-4-tech-debt.md  phase-5-tech-debt.md  pre-phase-5-review-summary.md  technical-debt-action-plan.md  (+1 more)
xtask/: Cargo.toml
(+47 files in other folders)
