# WRAITH Protocol - Workspace Manifest
# Wire-speed Resilient Authenticated Invisible Transfer Handler
#
# A decentralized secure file transfer protocol optimized for high-throughput,
# low-latency operation with strong security guarantees and traffic analysis resistance.

[workspace]
resolver = "2"
members = [
    "crates/wraith-core",
    "crates/wraith-crypto",
    "crates/wraith-transport",
    "crates/wraith-obfuscation",
    "crates/wraith-discovery",
    "crates/wraith-files",
    "crates/wraith-cli",
    "xtask",
]

# XDP crate excluded from default - requires special build
exclude = ["crates/wraith-xdp"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/doublegate/WRAITH-Protocol"
homepage = "https://github.com/doublegate/WRAITH-Protocol"
authors = ["WRAITH Protocol Contributors"]
keywords = ["file-transfer", "p2p", "encryption", "privacy", "stealth"]
categories = ["network-programming", "cryptography", "command-line-utilities"]
description = "Wire-speed Resilient Authenticated Invisible Transfer Handler - Decentralized secure file transfer with traffic analysis resistance"

[workspace.dependencies]
# Workspace crates
wraith-core = { path = "crates/wraith-core" }
wraith-crypto = { path = "crates/wraith-crypto" }
wraith-transport = { path = "crates/wraith-transport" }
wraith-obfuscation = { path = "crates/wraith-obfuscation" }
wraith-discovery = { path = "crates/wraith-discovery" }
wraith-files = { path = "crates/wraith-files" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake3 = "1.5"
snow = "0.9"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
getrandom = "0.2"

# Kernel interfaces
io-uring = "0.6"
socket2 = "0.5"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.18"
console = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.4"
criterion = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
