[package]
name = "wraith-integration-tests"
description = "Integration tests for WRAITH Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
wraith-core = { path = "../crates/wraith-core" }
wraith-crypto = { path = "../crates/wraith-crypto" }
rand_core = { workspace = true }
rand = "0.8"

[[test]]
name = "integration_tests"
path = "integration_tests.rs"
