[package]
name = "wraith-integration-tests"
description = "Integration tests for WRAITH Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
wraith-core = { path = "../crates/wraith-core" }
wraith-crypto = { path = "../crates/wraith-crypto" }
wraith-transport = { path = "../crates/wraith-transport" }
wraith-obfuscation = { path = "../crates/wraith-obfuscation" }
wraith-discovery = { path = "../crates/wraith-discovery" }
wraith-files = { path = "../crates/wraith-files" }
rand_core = { workspace = true }
rand = "0.8"
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3"

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[[test]]
name = "property_tests"
path = "property_tests.rs"

[[bench]]
name = "transport_benchmarks"
path = "../benches/transport_benchmarks.rs"
harness = false

[[bench]]
name = "transfer"
path = "../benches/transfer.rs"
harness = false
