[package]
name = "wraith-cli"
description = "Command-line interface for WRAITH protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "wraith"
path = "src/main.rs"

[dependencies]
wraith-core = { workspace = true }
wraith-crypto = { workspace = true }
wraith-transport = { workspace = true }
wraith-obfuscation = { workspace = true }
wraith-discovery = { workspace = true }
wraith-files = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
