[package]
name = "wraith-core"
description = "Core protocol implementation for WRAITH - frame encoding, session state machine, congestion control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["simd"]
simd = []

[dependencies]
wraith-crypto = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "frame_bench"
harness = false

[[bench]]
name = "transfer_bench"
harness = false
