[package]
name = "wraith-crypto"
description = "Cryptographic primitives for WRAITH - Noise handshake, AEAD, Elligator2, key ratcheting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
snow = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
