[package]
name = "wraith-crypto"
description = "Cryptographic primitives for WRAITH - Noise handshake, AEAD, Elligator2, key ratcheting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
snow = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
serde = { workspace = true }
subtle = "2.5"
curve25519-elligator2 = { version = "0.1.0-alpha.2", features = ["elligator2"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rand = "0.8"

[[bench]]
name = "crypto_bench"
harness = false
