[package]
name = "wraith-files"
description = "File transfer engine for WRAITH - chunking, integrity, resume support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# SIMD acceleration features for BLAKE3 hashing
# Enable the appropriate feature for your target platform for maximum performance

# Default: Rayon multi-threading + SIMD (auto-detected by blake3)
default = ["rayon"]

# Multi-threading with rayon (recommended for all platforms)
# BLAKE3 automatically uses SIMD (AVX2, AVX-512, NEON) based on target CPU
rayon = ["blake3/rayon"]

# ARM NEON SIMD (auto-enabled on aarch64, 2-4x speedup on ARM)
# Note: NEON is automatically enabled on aarch64; this feature is for explicit control
simd-neon = ["blake3/neon"]

# Pure Rust implementation (no SIMD, for compatibility)
pure = ["blake3/pure"]

[dependencies]
wraith-core = { workspace = true }
wraith-crypto = { workspace = true }
# BLAKE3 with conditional SIMD features
blake3 = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }

# Linux-only dependencies for high-performance file I/O
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
criterion = { workspace = true }
rand = "0.8"

[[bench]]
name = "files_bench"
harness = false
