[package]
name = "wraith-transport"
description = "Network transport layer for WRAITH - AF_XDP, io_uring, UDP fallback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wraith-core = { workspace = true }
wraith-crypto = { workspace = true }
tokio = { workspace = true }
io-uring = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
