[package]
name = "wraith-transport"
description = "Network transport layer for WRAITH - AF_XDP, io_uring, UDP fallback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
crossbeam-channel = "0.5"
num_cpus = "1.16"
libc = "0.2"

# Linux-only dependencies for kernel bypass (AF_XDP, io_uring)
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
